[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "tmonitor"
version = "1.0.0"
description = "AliveMonitoring Module"
requires-python = ">=2.0"
license = {file = "LICENSE"}
readme = "README.md"

[tool.hatch.metadata]
allow-direct-references = true
